landing page without login form

--- a/client/layouts/frontend/general_layout.html
+++ b/client/layouts/frontend/general_layout.html
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="col-xs-12">
           <div class='pull-left'>
-            This project is part of RST-IT Open Source initiative.
+            This project is part of <a href="http://rst-it.com">RST-IT</a> Open Source initiative.
           </div>
           <div class='pull-right'>
             Check out our 
