--- a/client/views/landing/landing.sass
+++ b/client/views/landing/landing.sass
@@ -17,3 +17,10 @@ section.branding
     text-align: center
     a i
       padding: 0 10px
+
+
+section.features
+  padding: 50px 0
+  h3 i
+    color: #000
+    padding-right: 5px
