lregister form basic

--- a/client/lib/css/_variables.sass
+++ b/client/lib/css/_variables.sass
@@ -1,5 +1,7 @@
 // colors
 $dark-gray: #38424c
 $light-gray: #ebf0f3
+$lighter-gray: #bdc3c7
 $gray: #7f8c8d
 $green: #27ae60
+$border-gray: #efefef
