--- a/client/lib/css/buttons.sass
+++ b/client/lib/css/buttons.sass
@@ -6,11 +6,17 @@
   border-radius: 0px
 
 .btn-primary
+  background: $dark-gray
+  border-color: $dark-gray
+  &:hover
+    background: #000
+  
+
+.btn-transparent
   color: #fff
+  background: none
   border: 1px solid #fff
   &:hover
     background: $dark-gray
     border-color: #000
-
-.btn-transparent
-  background: none
+    color: #fff
