--- a/client/views/landing/landing.html
+++ b/client/views/landing/landing.html
@@ -13,11 +13,11 @@
           </h1>
         </div>
         <div class="col-md-6">
-          alamakota
+          {{> userSignUp}}
         </div>
       </div>
       <div class="sticky">
-        <a href="#" class="btn btn-primary btn-transparent">
+        <a href="#" class="btn btn-transparent">
           <i class="fa fa-caret-down"></i>
           LEARN MORE
           <i class="fa fa-caret-down"></i>
