--- a/client/lib/css/buttons.sass
+++ b/client/lib/css/buttons.sass
@@ -20,3 +20,10 @@
     background: $dark-gray
     border-color: #000
     color: #fff
+
+.btn-link
+  padding: 15px 30px
+  font-size: 14px
+  &:hover
+    text-decoration: none
+    background: darken($green, 3%)
