--- a/client/views/landing/landing.sass
+++ b/client/views/landing/landing.sass
@@ -1,6 +1,7 @@
 section.branding
   background: #209150 url("branding.jpg") no-repeat 50% 50%
   height: 96vh
+  min-height: 700px
   color: #fff
   position: relative
   .logo-line
