--- a/client/views/landing/login/sign_up.html
+++ b/client/views/landing/login/sign_up.html
@@ -5,7 +5,7 @@
     </header>
     {{ #autoForm schema="Schemas.UserSignUp" id="signUpForm"}}
       {{> afQuickField name='email' placeholder="Write your e-mail here" }}
-      {{> afQuickField name='username' placeholder="Write your nick name" }}
+      {{> afQuickField name='companyName' placeholder="Write your uniq company name" }}
       {{> afQuickField name='password' type="password" placeholder="Give your password" }}
       {{> afQuickField name='passwordConfirmation' type="password" placeholder="Your password once again" }}
       <div class="buttons">
