giving votes works

--- a/client/lib/css/_variables.sass
+++ b/client/lib/css/_variables.sass
@@ -1,7 +1,10 @@
 // colors
 $dark-gray: #38424c
+$gray: #7f8c8d
 $light-gray: #ebf0f3
 $lighter-gray: #bdc3c7
-$gray: #7f8c8d
+$ultra-light-gray: #f7f7f9
+$red: #e74c3c
+
 $green: #27ae60
 $border-gray: #efefef
