--- a/client/views/dashboard/bugs.html
+++ b/client/views/dashboard/bugs.html
@@ -2,7 +2,7 @@
   {{> createBug}}
   <div class="bugs-wrapper">
     <div class="container">
-      {{#each bugs}}
+      {{#each sortedBugs}}
         {{> bug}}
       {{/each}}
     </div>
