--- a/client/views/dashboard/dashboard_header.sass
+++ b/client/views/dashboard/dashboard_header.sass
@@ -12,3 +12,28 @@
 
   img
     padding: 15px 0
+
+.invitation-form
+  background: $dark-green
+  padding: 30px 0
+  color: #fff
+  label
+    font-size: 24px
+    font-weight: 200
+    padding: 5px 0
+  .btn
+    padding-left: 0
+    padding-right: 0
+  input
+    padding: 10px 0
+    border: none
+    border-radius: none
+    background: transparent
+    color: #fff
+    box-shadow: none !important
+    font-size: 24px
+    height: 43px
+    @include placeholder
+      color: #fff
+  .help-block
+    color: lighten(red, 40%)
