add hide button

--- a/client/views/dashboard/dashboard_header.html
+++ b/client/views/dashboard/dashboard_header.html
@@ -29,6 +29,9 @@
               <button type="submit" class="btn btn-block btn-transparent">INVITE USER</button>
             </div>
           {{ /autoForm}}
+          <div class="toggle-button">
+            <a href="#" class="btn btn-link"><i class="fa fa-caret-up"></i> Cancel <i class="fa fa-caret-up"></i></a>
+          </div>
         </div>
       </div>
     </div>
