--- a/client/views/dashboard/dashboard_header.sass
+++ b/client/views/dashboard/dashboard_header.sass
@@ -17,6 +17,7 @@
   background: $dark-green
   padding: 30px 0
   color: #fff
+  position: relative
   label
     font-size: 24px
     font-weight: 200
@@ -37,3 +38,16 @@
       color: #fff
   .help-block
     color: lighten(red, 40%)
+  .toggle-button
+    position: absolute
+    bottom: 0
+    left: 0
+    width: 100%
+    text-align: center
+    a
+      color: #fff
+      opacity: 0.5
+      &:hover
+        opacity: 1
+      i
+        padding: 0 5px
