--- a/client/layouts/frontend/general_layout.html
+++ b/client/layouts/frontend/general_layout.html
@@ -12,9 +12,9 @@
             {{/if}}
           </div>
           <div class='pull-right'>
-            Check out our 
-            <a href="https://github.com/rstgroup"><i class="fa fa-github"></i> github profile </a>
-            and collaborate with us!
+            <span class="hidden-sm hidden-xs">Check out our open source projects</span>
+            <a href="http://rst-it.com/our-code"><i class="fa fa-github"></i> open source projects </a>
+            <span class="hidden-sm hidden-xs">and collaborate with us!</span>
           </div>
         </div>
       </div>
@@ -28,9 +28,9 @@
           <div class='pull-left'>
             This project is part of <a href="http://rst-it.com">RST-IT</a> Open Source initiative.
           </div>
-          <div class='pull-right'>
-            Check out our 
-            <a href="https://github.com/rstgroup"><i class="fa fa-github"></i> github profile </a>
+          <div class='pull-right hidden-xs'>
+            Check out our open source projects
+            <a href="http://rst-it.com/our-code"><i class="fa fa-github"></i> open source projects </a>
             and collaborate with us!
           </div>
         </div>
