--- a/client/layouts/frontend/general_layout.sass
+++ b/client/layouts/frontend/general_layout.sass
@@ -1,21 +1,27 @@
 @import "client/lib/css/main"
 
+html
+  position: relative
+  min-height: 100%
+
 body
   font-family: 'Roboto', sans-serif
   color: $gray
+  margin-bottom: 100px
 
 header.github
   color: #ffffff
   background: $dark-gray
-  height: 34px
   font-size: 12px
   padding: 7px 0
   a
     color: $green
 
-
-
 footer.rst
   height: 100px
   padding: 40px 0
   background: $light-gray
+  position: absolute
+  bottom: 0
+  left: 0
+  width: 100%
