--- a/client/lib/css/_variables.sass
+++ b/client/lib/css/_variables.sass
@@ -9,3 +9,11 @@ $red: #e74c3c
 $green: #27ae60
 $dark-green: #25a45b
 $border-gray: #efefef
+
+// sizes
+$screen-sm-min: 768px
+$screen-xs-max: ($screen-sm-min - 1)
+$screen-md-min: 992px
+$screen-sm-max: ($screen-md-min - 1)
+$screen-lg-min: 1200px
+$screen-md-max: ($screen-lg-min - 1)
