--- a/client/views/landing/landing.html
+++ b/client/views/landing/landing.html
@@ -7,12 +7,12 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-lg-6 col-md-5">
           <h1>
             Dont be afraid to tell others <b>what bugs you</b> about your workplace! 
           </h1>
         </div>
-        <div class="col-md-5 col-md-offset-1">
+        <div class="col-lg-5 col-lg-offset-1 col-md-6 col-md-offset-1">
           <div role="tabpanel">
             <ul class="nav nav-tabs nav-justified" role="tablist">
               <li role="presentation" class="active"><a href="#register" aria-controls="register" role="tab" data-toggle="tab">Register</a></li>
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="sticky">
-        <a href="#" class="btn btn-transparent">
+        <a href="#features" class="btn btn-transparent">
           <i class="fa fa-caret-down"></i>
           LEARN MORE
           <i class="fa fa-caret-down"></i>
@@ -41,7 +41,7 @@
       </div>
     </div>
   </section>
-  <section class="features">
+  <section class="features" id="features">
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
