--- a/client/views/dashboard/bug.sass
+++ b/client/views/dashboard/bug.sass
@@ -48,3 +48,20 @@
       margin: 0
       font-size: 12px
       font-weight: bold
+
+
+@media(max-width: $screen-sm-max)
+  .bug
+    height: 50px
+    margin: 0 -15px
+    .counter
+      width: 50px
+      padding: 15px 0 0
+    a.btn
+      width: 60px
+      height: 50px
+      padding: 17px 0
+      font-size: 10px
+    .core
+      margin: 0 120px 0 50px
+      padding: 10px 0
