--- a/client/layouts/frontend/general_layout.html
+++ b/client/layouts/frontend/general_layout.html
@@ -12,8 +12,12 @@
             {{/if}}
           </div>
           <div class='pull-right'>
-            <span class="hidden-sm hidden-xs">Check out our open source projects</span>
-            <a href="http://rst-it.com/our-code"><i class="fa fa-github"></i> open source projects </a>
+            <span class="hidden-sm hidden-xs">Visit project in </span>
+            <a href="https://github.com/rstgroup/whatbugsme"><i class="fa fa-github"></i> githup </a>
+            or
+            <span class="hidden-sm hidden-xs">check out our</span> 
+            other 
+            <a href="http://rst-it.com/our-code">open source projects </a>
             <span class="hidden-sm hidden-xs">and collaborate with us!</span>
           </div>
         </div>
@@ -29,7 +33,7 @@
             This project is part of <a href="http://rst-it.com">RST-IT</a> Open Source initiative.
           </div>
           <div class='pull-right hidden-xs'>
-            Check out our open source projects
+            Check out our
             <a href="http://rst-it.com/our-code"><i class="fa fa-github"></i> open source projects </a>
             and collaborate with us!
           </div>
