--- a/client/views/landing/landing.html
+++ b/client/views/landing/landing.html
@@ -9,7 +9,7 @@
       <div class="row">
         <div class="col-lg-6 col-md-5">
           <h1>
-            Dont be afraid to tell others <b>what bugs you</b> about your workplace! 
+            Don't be afraid to tell others <b>what bugs you</b> about your workplace! 
           </h1>
         </div>
         <div class="col-lg-5 col-lg-offset-1 col-md-6 col-md-offset-1">
