--- a/client/views/dashboard/bug.sass
+++ b/client/views/dashboard/bug.sass
@@ -1,7 +1,7 @@
 @import "client/lib/css/main"
 
 .bug
-  height: 70px
+  min-height: 70px
   border-bottom: 1px solid $border-gray
   .buttons
     float: right
@@ -52,7 +52,7 @@
 
 @media(max-width: $screen-sm-max)
   .bug
-    height: 50px
+    min-height: 50px
     margin: 0 -15px
     .counter
       width: 50px
