--- a/client/views/dashboard/dashboard_header.sass
+++ b/client/views/dashboard/dashboard_header.sass
@@ -55,6 +55,13 @@
         padding: 0 5px
 
 @media(max-width: $screen-sm-max)
+  .dashboard-header .buttons 
+    float: none
+    a
+      font-size: 12px
+      display: block
+      width: 50%
+      float: left
   .invitation-form
     .toggle-button
       position: relative
