android icons and typo

--- a/client/layouts/frontend/general_layout.html
+++ b/client/layouts/frontend/general_layout.html
@@ -13,7 +13,7 @@
           </div>
           <div class='pull-right'>
             <span class="hidden-sm hidden-xs">Visit project in </span>
-            <a href="https://github.com/rstgroup/whatbugsme"><i class="fa fa-github"></i> githup </a>
+            <a href="https://github.com/rstgroup/whatbugsme"><i class="fa fa-github"></i> github </a>
             or
             <span class="hidden-sm hidden-xs">check out our</span> 
             other 
