--- a/client/views/landing/landing.html
+++ b/client/views/landing/landing.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <div class="logo-line"><img src="logo.png"></div>
+          <div class="logo-line"><a href="/" class='logo'><img src="logo.png"></a></div>
         </div>
       </div>
       <div class="row">
