--- a/client/views/landing/landing.html
+++ b/client/views/landing/landing.html
@@ -3,14 +3,14 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <div class="logo-line"><a href="/" class='logo'><img src="logo.png"></a></div>
+          <div class="logo-line"><a href="/" class='logo'><img src="logo.png"></a>  </div>
         </div>
       </div>
       <div class="row">
         {{#unless is_mobile}}
         <div class="col-lg-6 col-md-5">
           <h1>
-            Don't be afraid to tell others <b>what bugs you</b> about your workplace! 
+            Share with others <b>what bugs you</b> about your workplace! Take feedback and focus on the most important problems.
           </h1>
         </div>
         {{/unless}}
@@ -52,30 +52,25 @@
           <div class="col-sm-4">
             <h3><i class="fa fa-user"></i> Anonymous</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat.
+              Something got under your skin in the workplace? Use this virtual complains box with no fear and your problems will be noticed.
+              Feel free to write what vexes you the most. You will remain anonymous, the only information shown will be the name of your company.
             </p>
             <p>
-              Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              Invite friends and coworkers as your comments about the situation in your workplace may interest many other users. You won’t be alone in your dissatisfaction.
             </p>
           </div>
           <div class="col-sm-4">
             <h3><i class="fa fa-sort-amount-asc"></i> Vote for the entries</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.</p>
+            <p>Share your entries with others and start grumbling together. Find out what bugs others. You can use rating system to focus on the most important problems. Vote for the entries about the most irritating issues in your workplaces. Surely, there will be many friends of the same mind.</p>
           </div>
           <div class="col-sm-4">
             <h3><i class="fa fa-github"></i> OpenSource</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat.</p>
+            <p>
+              Found this application attractive? We share this solution in our open source. It is free and available to everyone. Moreover, if our hosted solution is not enough - you could grab the code and install it locally, wherever you like. It works on linux or osx.
+            </p>
+            <p>
+              Start shaping a friendlier workplaces by identifying the most demotivating factors that should be changed or improved. 
+            </p>
           </div>
         </div>
       </div>
