some style changes

--- a/client/views/landing/landing.html
+++ b/client/views/landing/landing.html
@@ -10,8 +10,9 @@
         {{#unless is_mobile}}
         <div class="col-lg-6 col-md-5">
           <h1>
-            Share with others <b>what bugs you</b> about your workplace! Take feedback and focus on the most important problems.
+            Share with others <b>what bugs you</b> about your workplace! 
           </h1>
+          <h2><b>Take feedback</b> and focus on the <b>most important</b> problems in your company.</h2>
         </div>
         {{/unless}}
         <div class="col-lg-5 col-lg-offset-1 col-md-6 col-md-offset-1">
