--- a/client/views/landing/landing.sass
+++ b/client/views/landing/landing.sass
@@ -10,8 +10,11 @@ section.branding
     padding: 25px 0 0
     height: 10vh
   h1
-    height: 30vh
-    padding: 30vh 0
+    padding: 20vh 0 10px
+  h2 
+    font-size: 26px
+    font-weight: 300
+    padding-bottom: 20px
   .sticky
     position: absolute
     left: 0
@@ -28,6 +31,9 @@ section.branding
     height: auto
     h1
       padding: 20px 0
+      text-align: center
+    h2
+      text-align: center
     .sticky
       position: relative
       top: auto
