Improved Buttons and menu

--- a/client/lib/css/buttons.sass
+++ b/client/lib/css/buttons.sass
@@ -17,13 +17,14 @@
   background: none
   border: 1px solid #fff
   &:hover
-    background: $dark-gray
-    border-color: #000
-    color: #fff
+    background: #fff
+    color: $green
+    border: none
 
 .btn-link
-  padding: 15px 30px
+  padding: 19px 30px
   font-size: 14px
   &:hover
     text-decoration: none
     background: darken($green, 3%)
+    height: 100%
