Fixed bug input

--- a/client/views/dashboard/create_bug.sass
+++ b/client/views/dashboard/create_bug.sass
@@ -11,6 +11,9 @@
     font-size: 18px
     &:focus
       box-shadow: none !important
+    @include placeholder
+      color: #bababa
+      font-style: italic
   .help-block
     position: absolute
     bottom: 4px
