add link to google play

--- a/client/views/landing/landing.html
+++ b/client/views/landing/landing.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <div class="logo-line"><a href="/" class='logo'><img src="logo.png"></a>  </div>
+          <div class="logo-line"><img src="logo.png"> </div>
         </div>
       </div>
       <div class="row">
@@ -13,6 +13,9 @@
             Share with others <b>what bugs you</b> about your workplace! 
           </h1>
           <h2><b>Take feedback</b> and focus on the <b>most important</b> problems in your company.</h2>
+          <p>
+            <a href="https://play.google.com/store/apps/details?id=com.idcfk3ul1oon0se11pyijt"><img src="/gplay.png"></a>
+          </p>
         </div>
         {{/unless}}
         <div class="col-lg-5 col-lg-offset-1 col-md-6 col-md-offset-1">
