styles fix for invitation cance btn

--- a/client/views/dashboard/dashboard_header.sass
+++ b/client/views/dashboard/dashboard_header.sass
@@ -49,6 +49,8 @@
     a
       color: #fff
       opacity: 0.5
+      padding: 8px 0
+      background: transparent
       &:hover
         opacity: 1
       i
